# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//components/feed/features.gni")

if (enable_feed_in_chrome) {
  # TODO(twellington): Add a dependency on //components/feed when an appropriate target is defined.
  feed_deps = [ "//third_party/feed:feed_lib_java" ]

  feed_java_sources = [
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/FeedEventReporter.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/FeedImageLoader.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/FeedImageLoaderBridge.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/FeedNetworkBridge.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/FeedNewTabPage.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/FeedProcessScopeFactory.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/FeedSchedulerBridge.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/StreamLifecycleManager.java",
    "//chrome/android/feed/core/java/src/org/chromium/chrome/browser/feed/action/FeedActionHandler.java",
  ]

  feed_srcjar_deps = [ "//components/feed/core:feed_core_java_enums_srcjar" ]

  feed_conformance_test_sources = [
    "//chrome/android/javatests/src/org/chromium/chrome/browser/feed/FeedNetworkBridgeConformanceTest.java",
    "//chrome/android/javatests/src/org/chromium/chrome/browser/feed/FeedSchedulerBridgeConformanceTest.java",
  ]

  feed_conformance_test_deps = [
    "//third_party/feed:feed_lib_java",
    "//third_party/feed:feed_conformance_test_lib_android_java",
  ]
} else {
  feed_deps = []
  feed_java_sources = [
    "//chrome/android/feed/dummy/java/src/org/chromium/chrome/browser/feed/FeedNewTabPage.java",
    "//chrome/android/feed/dummy/java/src/org/chromium/chrome/browser/feed/FeedEventReporter.java",
  ]
  feed_srcjar_deps = []
}
