# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("device_sync") {
  sources = [
    "device_sync_client_factory.cc",
    "device_sync_client_factory.h",
  ]

  deps = [
    "//chromeos/services/device_sync/public/cpp/",
  ]
}
