# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom_component("mojom") {
  sources = [
    "gamepad.mojom",
  ]

  output_prefix = "gamepad_mojom"
  macro_prefix = "GAMEPAD_MOJOM"
}

mojom("gamepad_mojom_traits_test") {
  sources = [
    "gamepad_mojom_traits_test.mojom",
  ]

  public_deps = [
    ":mojom",
  ]
}
