# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ios/web/js_compile.gni")

source_set("manualfill") {
  sources = [
    "keyboard_accessory_view.h",
    "keyboard_accessory_view.mm",
    "keyboard_background_view.h",
    "keyboard_background_view.mm",
  ]
  deps = [
    "//base",
    "//third_party/material_design_icons:ic_account_circle",
    "//third_party/material_design_icons:ic_credit_card",
    "//third_party/material_design_icons:ic_keyboard_arrow_down",
    "//third_party/material_design_icons:ic_keyboard_arrow_up",
    "//third_party/material_design_icons:ic_vpn_key",
  ]
  libs = [ "UIKit.framework" ]
  configs += [ "//build/config/compiler:enable_arc" ]
}
